--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.9.0
 asqlite==2.0.0
 asyncio==3.4.3
+audioop-lts==0.2.2
 azure-cognitiveservices-speech==1.44.0
 datetime==5.5
 gtts==2.5.4
