--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ pydub==0.25.1
 pygame==2.6.1
 requests==2.32.4
 rich==14.0.0
+setuptools==82.0.0
 soundfile==0.13.1
-twitchio==3.1.0
+twitchio==3.2.1
